add JAVA_HOME and CATALINA_OPTS environment vriables